Committed by v2rayse.com

--- a/data/v2rayse-free.yaml
+++ b/data/v2rayse-free.yaml
@@ -1,9 +1,9 @@
 ####################################
 # 创建者：v2rayse.com
 # 客户端：Clash
-# 创建时间：2024-06-08 23:14:18
+# 创建时间：2024-06-10 13:37:05
 # 使用模版：V2RaySE 默认模版
-# 节点数量：10
+# 节点数量：24
 ####################################
 mixed-port: 7890
 allow-lan: true
@@ -85,109 +85,207 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇺🇸_US_美国_1","type":"ss","server":"38.114.114.207","port":5000,"password":"Y6R9pAtvxxzmGC","cipher":"aes-256-gcm"}
-  - {"name":"🇺🇸_US_美国_2","type":"trojan","server":"104.16.1.10","port":443,"udp":true,"password":"qj1Dz1CJmFQRhWr1SP80aA","sni":"cdn-21.gsmxreality.com","skip-cert-verify":true,"network":"grpc","grpc-opts":{"grpc-service-name":"443trojan"}}
-  - {"name":"🇺🇸_US_美国_3","type":"ss","server":"38.114.114.207","port":8080,"password":"KixLvKzwjekG00rm","cipher":"aes-256-gcm"}
-  - {"name":"🇨🇳_CN_中国->🇺🇸_US_美国","type":"ss","server":"4208.ens3.buzz","port":12390,"password":"e06522ae-7517-4584-ac3c-6951df538092","cipher":"aes-128-gcm"}
-  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_1","type":"vmess","server":"www.speedtest.net","port":2082,"cipher":"auto","uuid":"412fc228-92ae-4dd8-bdc9-1fcc66c15c7a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/@config_shahin,@config_shahin,@config_shahin,@config_shahin?ed=80","headers":{"host":"2.irvn.debian.6.i.6.6.fxp.debian.org.speedtest.net.列列男事的事列上赛男.ghormehsabzi.cyou."}}}
-  - {"name":"🇸🇪_SE_瑞典->🇩🇪_DE_德国","type":"trojan","server":"185.146.173.29","port":443,"udp":true,"password":"f91f38bb-72d5-4f3e-8311-1788986293f5","sni":"iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpnc.iran-mehr14.ir","skip-cert-verify":false,"network":"grpc","grpc-opts":{"grpc-service-name":"2pxF1YL0obWgOVYsTfLJX3ihXJUp"}}
-  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_2","type":"vmess","server":"cdnjs.com","port":443,"cipher":"auto","uuid":"6b880b07-e952-4c0b-b4a3-6c9ac4cf9d3f","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/QvtvPdDXXIlSdZMqnuxG","headers":{"host":"hdfy1c3.iraniancpi.uk"}}}
-  - {"name":"🇺🇸_US_美国_4","type":"trojan","server":"104.21.69.44","port":443,"udp":true,"password":"qj1Dz1CJmFQRhWr1SP80aA","sni":"cdn-21.gsmxreality.com","skip-cert-verify":true,"network":"grpc","grpc-opts":{"grpc-service-name":"443trojan"}}
-  - {"name":"🇺🇸_US_美国_5","type":"ss","server":"38.114.114.207","port":5004,"password":"g5MeD6Ft3CWlJId","cipher":"aes-256-gcm"}
-  - {"name":"🇷🇺_RU_俄罗斯联邦","type":"vmess","server":"eedp257bubu2wefy2.lovebaipiao.net","port":54321,"cipher":"auto","uuid":"a911d34d-d580-4dc1-aea9-1932a681e336","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/iphone"}}
+  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国","type":"trojan","server":"104.21.43.13","port":443,"udp":true,"password":"f91f38bb-72d5-4f3e-8311-1788986293f5","sni":"iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpnc.iran-mehr14.ir","skip-cert-verify":true,"network":"grpc","grpc-opts":{"grpc-service-name":"2pxF1YL0obWgOVYsTfLJX3ihXJUp"}}
+  - {"name":"🇵🇱_PL_波兰_1","type":"ss","server":"51.77.53.200","port":3389,"password":"Y6R9pAtvxxzmGC","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"104.16.61.8","port":2086,"cipher":"auto","uuid":"441da342-ce90-441e-bff9-d2ceb55e68ca","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/ivideos.sbs/linkws","headers":{"host":"ury-unit-c030ehei8.poget71138.workers.dev"}}}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"104.16.60.8","port":2095,"cipher":"auto","uuid":"05641cf5-58d2-4ba4-a9f1-b3cda0b1fb1d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/obdii.cfd/linkws","headers":{"host":"icy-tooth-3d05.plzthsmdnss-7d8ly.workers.dev"}}}
+  - {"name":"🇵🇱_PL_波兰_2","type":"ss","server":"51.77.53.200","port":4444,"password":"pKEW8JPByTVTLtM","cipher":"aes-256-gcm"}
+  - {"name":"🇵🇱_PL_波兰_3","type":"ss","server":"51.77.53.200","port":6697,"password":"TEzjfAYq2IjtuoS","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"104.19.38.28","port":8880,"cipher":"auto","uuid":"028c8131-9e3e-4836-94ac-ea7f24d4d05a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm","headers":{"host":"funk-england-indirect-gospel.trycloudflare.com"}}}
+  - {"name":"🇺🇸_US_美国_4","type":"ss","server":"23.154.136.137","port":5498,"password":"lGqs95QkFHo2NV","cipher":"aes-256-gcm"}
+  - {"name":"🇦🇱_AL_阿尔巴尼亚","type":"ss","server":"109.104.152.186","port":11223,"password":"7/bb9x3TJQ4Y5SRA/Al3OdwxIk4uf3Jg8N9wDQg+Uto=","cipher":"2022-blake3-chacha20-poly1305"}
+  - {"name":"🇷🇺_RU_俄罗斯联邦","type":"vmess","server":"46.17.41.197","port":55983,"cipher":"auto","uuid":"034449ce-f7ad-4a51-8044-d677e80b2613","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇵🇱_PL_波兰_4","type":"ss","server":"51.77.53.200","port":8118,"password":"cdBIDV42DCwnfIN","cipher":"aes-256-gcm"}
+  - {"name":"🇵🇱_PL_波兰_5","type":"ss","server":"51.77.53.200","port":2375,"password":"faBAoD54k87UJG7","cipher":"aes-256-gcm"}
+  - {"name":"🇵🇱_PL_波兰_6","type":"ss","server":"51.77.53.200","port":7002,"password":"RexnBgU7EV5ADxG","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国_5","type":"trojan","server":"172.67.215.180","port":443,"udp":true,"password":"f91f38bb-72d5-4f3e-8311-1788986293f5","sni":"iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpnc.iran-mehr14.ir","skip-cert-verify":true,"network":"grpc","grpc-opts":{"grpc-service-name":"2pxF1YL0obWgOVYsTfLJX3ihXJUp"}}
+  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"148.135.40.190","port":8080,"cipher":"auto","uuid":"f9808413-8b12-42ea-86ff-a0af6727a0e8","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/index?ed=2560"}}
+  - {"name":"🇵🇱_PL_波兰_7","type":"ss","server":"51.77.53.200","port":7307,"password":"FoOiGlkAA9yPEGP","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国->🇬🇧_GB_英国","type":"vmess","server":"104.25.240.181","port":8443,"cipher":"auto","uuid":"3b873394-0165-4825-dd8f-3fb78b2b036d","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"ukv4.7070777.xyz"}}}
+  - {"name":"🇺🇸_US_美国_7","type":"ss","server":"38.110.1.51","port":8091,"password":"PCnnH6SQSnfoS27","cipher":"aes-256-gcm"}
+  - {"name":"🇷🇺_RU_俄罗斯联邦->🇳🇱_NL_荷兰","type":"vmess","server":"5.182.86.28","port":12307,"cipher":"auto","uuid":"9ad4e318-03fc-4e3b-e0ab-d86d2017de71","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp"}
+  - {"name":"🇵🇱_PL_波兰_8","type":"ss","server":"51.77.53.200","port":8091,"password":"PCnnH6SQSnfoS27","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国_8","type":"trojan","server":"104.16.1.10","port":443,"udp":true,"password":"qj1Dz1CJmFQRhWr1SP80aA","sni":"cdn-21.gsmxreality.com","skip-cert-verify":true,"network":"grpc","grpc-opts":{"grpc-service-name":"443trojan"}}
+  - {"name":"🇳🇱_NL_荷兰","type":"ss","server":"109.201.152.181","port":443,"password":"shadowsocks","cipher":"aes-128-cfb"}
+  - {"name":"🇺🇸_US_美国_9","type":"vmess","server":"104.16.60.8","port":2086,"cipher":"auto","uuid":"f584de15-2034-4170-a723-f48c2bae5e0f","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/afrhms16v.bestxray.buzz/linkws","headers":{"host":"y-old-mode-9c0diab.wiriy73548.workers.dev"}}}
+  - {"name":"🇸🇪_SE_瑞典->🇩🇪_DE_德国","type":"trojan","server":"185.146.173.29","port":443,"udp":true,"password":"f91f38bb-72d5-4f3e-8311-1788986293f5","sni":"iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpn_iran_mehr_vpnc.iran-mehr14.ir","skip-cert-verify":true,"network":"grpc","grpc-opts":{"grpc-service-name":"2pxF1YL0obWgOVYsTfLJX3ihXJUp"}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
+      - 🇺🇸_US_美国->🇩🇪_DE_德国
+      - 🇵🇱_PL_波兰_1
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇵🇱_PL_波兰_2
+      - 🇵🇱_PL_波兰_3
       - 🇺🇸_US_美国_3
-      - 🇨🇳_CN_中国->🇺🇸_US_美国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
       - 🇺🇸_US_美国_4
-      - 🇺🇸_US_美国_5
+      - 🇦🇱_AL_阿尔巴尼亚
       - 🇷🇺_RU_俄罗斯联邦
+      - 🇵🇱_PL_波兰_4
+      - 🇵🇱_PL_波兰_5
+      - 🇵🇱_PL_波兰_6
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
+      - 🇵🇱_PL_波兰_7
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇺🇸_US_美国_7
+      - 🇷🇺_RU_俄罗斯联邦->🇳🇱_NL_荷兰
+      - 🇵🇱_PL_波兰_8
+      - 🇺🇸_US_美国_8
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_9
+      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
+      - 🇺🇸_US_美国->🇩🇪_DE_德国
+      - 🇵🇱_PL_波兰_1
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇵🇱_PL_波兰_2
+      - 🇵🇱_PL_波兰_3
       - 🇺🇸_US_美国_3
-      - 🇨🇳_CN_中国->🇺🇸_US_美国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
       - 🇺🇸_US_美国_4
-      - 🇺🇸_US_美国_5
+      - 🇦🇱_AL_阿尔巴尼亚
       - 🇷🇺_RU_俄罗斯联邦
+      - 🇵🇱_PL_波兰_4
+      - 🇵🇱_PL_波兰_5
+      - 🇵🇱_PL_波兰_6
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
+      - 🇵🇱_PL_波兰_7
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇺🇸_US_美国_7
+      - 🇷🇺_RU_俄罗斯联邦->🇳🇱_NL_荷兰
+      - 🇵🇱_PL_波兰_8
+      - 🇺🇸_US_美国_8
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_9
+      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸_US_美国->🇩🇪_DE_德国
+      - 🇵🇱_PL_波兰_1
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇵🇱_PL_波兰_2
+      - 🇵🇱_PL_波兰_3
       - 🇺🇸_US_美国_3
-      - 🇨🇳_CN_中国->🇺🇸_US_美国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
       - 🇺🇸_US_美国_4
-      - 🇺🇸_US_美国_5
+      - 🇦🇱_AL_阿尔巴尼亚
       - 🇷🇺_RU_俄罗斯联邦
+      - 🇵🇱_PL_波兰_4
+      - 🇵🇱_PL_波兰_5
+      - 🇵🇱_PL_波兰_6
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
+      - 🇵🇱_PL_波兰_7
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇺🇸_US_美国_7
+      - 🇷🇺_RU_俄罗斯联邦->🇳🇱_NL_荷兰
+      - 🇵🇱_PL_波兰_8
+      - 🇺🇸_US_美国_8
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_9
+      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
+      - 🇺🇸_US_美国->🇩🇪_DE_德国
+      - 🇵🇱_PL_波兰_1
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇵🇱_PL_波兰_2
+      - 🇵🇱_PL_波兰_3
       - 🇺🇸_US_美国_3
-      - 🇨🇳_CN_中国->🇺🇸_US_美国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
       - 🇺🇸_US_美国_4
-      - 🇺🇸_US_美国_5
+      - 🇦🇱_AL_阿尔巴尼亚
       - 🇷🇺_RU_俄罗斯联邦
+      - 🇵🇱_PL_波兰_4
+      - 🇵🇱_PL_波兰_5
+      - 🇵🇱_PL_波兰_6
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
+      - 🇵🇱_PL_波兰_7
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇺🇸_US_美国_7
+      - 🇷🇺_RU_俄罗斯联邦->🇳🇱_NL_荷兰
+      - 🇵🇱_PL_波兰_8
+      - 🇺🇸_US_美国_8
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_9
+      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
+      - 🇺🇸_US_美国->🇩🇪_DE_德国
+      - 🇵🇱_PL_波兰_1
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇵🇱_PL_波兰_2
+      - 🇵🇱_PL_波兰_3
       - 🇺🇸_US_美国_3
-      - 🇨🇳_CN_中国->🇺🇸_US_美国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
       - 🇺🇸_US_美国_4
-      - 🇺🇸_US_美国_5
+      - 🇦🇱_AL_阿尔巴尼亚
       - 🇷🇺_RU_俄罗斯联邦
+      - 🇵🇱_PL_波兰_4
+      - 🇵🇱_PL_波兰_5
+      - 🇵🇱_PL_波兰_6
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
+      - 🇵🇱_PL_波兰_7
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇺🇸_US_美国_7
+      - 🇷🇺_RU_俄罗斯联邦->🇳🇱_NL_荷兰
+      - 🇵🇱_PL_波兰_8
+      - 🇺🇸_US_美国_8
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_9
+      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
+      - 🇺🇸_US_美国->🇩🇪_DE_德国
+      - 🇵🇱_PL_波兰_1
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇵🇱_PL_波兰_2
+      - 🇵🇱_PL_波兰_3
       - 🇺🇸_US_美国_3
-      - 🇨🇳_CN_中国->🇺🇸_US_美国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
       - 🇺🇸_US_美国_4
-      - 🇺🇸_US_美国_5
+      - 🇦🇱_AL_阿尔巴尼亚
       - 🇷🇺_RU_俄罗斯联邦
+      - 🇵🇱_PL_波兰_4
+      - 🇵🇱_PL_波兰_5
+      - 🇵🇱_PL_波兰_6
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
+      - 🇵🇱_PL_波兰_7
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇺🇸_US_美国_7
+      - 🇷🇺_RU_俄罗斯联邦->🇳🇱_NL_荷兰
+      - 🇵🇱_PL_波兰_8
+      - 🇺🇸_US_美国_8
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_9
+      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -210,16 +308,30 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸_US_美国->🇩🇪_DE_德国
+      - 🇵🇱_PL_波兰_1
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
+      - 🇵🇱_PL_波兰_2
+      - 🇵🇱_PL_波兰_3
       - 🇺🇸_US_美国_3
-      - 🇨🇳_CN_中国->🇺🇸_US_美国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
-      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
-      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
       - 🇺🇸_US_美国_4
-      - 🇺🇸_US_美国_5
+      - 🇦🇱_AL_阿尔巴尼亚
       - 🇷🇺_RU_俄罗斯联邦
+      - 🇵🇱_PL_波兰_4
+      - 🇵🇱_PL_波兰_5
+      - 🇵🇱_PL_波兰_6
+      - 🇺🇸_US_美国_5
+      - 🇺🇸_US_美国_6
+      - 🇵🇱_PL_波兰_7
+      - 🇺🇸_US_美国->🇬🇧_GB_英国
+      - 🇺🇸_US_美国_7
+      - 🇷🇺_RU_俄罗斯联邦->🇳🇱_NL_荷兰
+      - 🇵🇱_PL_波兰_8
+      - 🇺🇸_US_美国_8
+      - 🇳🇱_NL_荷兰
+      - 🇺🇸_US_美国_9
+      - 🇸🇪_SE_瑞典->🇩🇪_DE_德国
 
 rules:
 # 本地/局域网地址
